Refine layout and add user specific information
Updated several pug templates and associated CSS styles for an enhanced user interface. This includes modifications to display user specific details in the notifications and header templates. Adjustments to visual elements have improved presentation and behavior across multiple pages.

--- a/dev/templates/home-credit.pug
+++ b/dev/templates/home-credit.pug
@@ -58,7 +58,7 @@ block content
 									li.white-block-list-item
 										.white-block-list-item_image
 											svg
-												use(xlink:href='/img/sprite.svg#captive_portal')
+												use(xlink:href='/img/sprite.svg#encrypted')
 										.white-block-list-item_content
 											span Jan 17 at 5:22 AM
 											strong
@@ -165,7 +165,7 @@ block content
 									br
 									| identity theft, hacks and spam.
 								br
-								button.btn.-blue
+								button.btn.-blue.-bi
 									| View Removed Information
 
 					.gray-block
