--- a/dev/templates/home-plan.pug
+++ b/dev/templates/home-plan.pug
@@ -41,7 +41,7 @@ block content
 									li.white-block-list-item
 										.white-block-list-item_image
 											svg
-												use(xlink:href='/img/sprite.svg#request_quote')
+												use(xlink:href='/img/sprite.svg#mark_as_unread')
 										.white-block-list-item_content
 											span Jan 17 at 5:22 AM
 											strong
