--- a/dev/templates/home.pug
+++ b/dev/templates/home.pug
@@ -151,7 +151,7 @@ block content
                                     br
                                     | ensuring peace of mind while you browse
                                 ul.white-block-list
-                                    li.white-block-list-item.-empty
+                                    li.white-block-list-item.-empty.-upgrade
                                         .white-block-list-item_image
                                             .white-block-list-item_circle
                                         .white-block-list-item_content
@@ -159,11 +159,20 @@ block content
                                             .white-block-list-item_line
                                             .white-block-list-item_line
                                             .white-block-list-item_line.-short
+                                        .white-upgrade
+                                            h5.white-upgrade-title Upgrade Plan
+                                            p.white-upgrade-text
+                                                | Activate Privacy Protect and secure your
+                                                br
+                                                | anonymity with fast activity alerts.
+                                            button.white-upgrade-btn
+                                                | Protect My Privacy
                     .gray-block
                         h6.gray-block-title ID Risk Score
                         .gray-actions
                             span Breach Risk Score
                             strong 710
+                            i
                             em Medium
                         p.gray-text
                             | Our scoring models use predictive statistical
@@ -179,23 +188,23 @@ block content
                                     span License
                                 button.block-btn
                                     svg
-                                        use(xlink:href='/img/sprite.svg#directions_car')
+                                        use(xlink:href='/img/sprite.svg#mail')
                                     span Email
                                 button.block-btn
                                     svg
-                                        use(xlink:href='/img/sprite.svg#directions_car')
+                                        use(xlink:href='/img/sprite.svg#call')
                                     span Phone
                                 button.block-btn
                                     svg
-                                        use(xlink:href='/img/sprite.svg#directions_car')
+                                        use(xlink:href='/img/sprite.svg#id_card')
                                     span SSN
                                 button.block-btn
                                     svg
-                                        use(xlink:href='/img/sprite.svg#directions_car')
+                                        use(xlink:href='/img/sprite.svg#credit_card')
                                     span Credit
                                 button.block-btn
                                     svg
-                                        use(xlink:href='/img/sprite.svg#directions_car')
+                                        use(xlink:href='/img/sprite.svg#account_balance')
                                     span Savings
                             a.wh-all(href='#')
                                 | View All Items
