--- a/dev/templates/identity-addres.pug
+++ b/dev/templates/identity-addres.pug
@@ -19,7 +19,7 @@ block content
 								svg
 									use(xlink:href='/img/sprite.svg#check_circle')
 								span Active
-						label.select.identity-select
+						.select.identity-select(data-click="front:openSelect")
 							span.select-head
 								span.select-option Filters
 								svg
