--- a/dev/templates/identity-filter.pug
+++ b/dev/templates/identity-filter.pug
@@ -19,12 +19,12 @@ block content
 								svg
 									use(xlink:href='/img/sprite.svg#check_circle')
 								span Active
-						label.select.identity-select
+						.select.identity-select(data-click="front:openSelect")
 							span.select-head
 								span.select-option Filters
 								svg
 									use(xlink:href='/img/sprite.svg#chevron_right')
-							span.select-body.-active
+							span.select-body
 								.select-body_item
 									label.checkbox
 										input(type='checkbox')
