--- a/dev/templates/identity.pug
+++ b/dev/templates/identity.pug
@@ -19,12 +19,65 @@ block content
 								svg
 									use(xlink:href='/img/sprite.svg#check_circle')
 								span Active
-						label.select.identity-select
+						.select.identity-select(data-click="front:openSelect")
 							span.select-head
 								span.select-option Filters
 								svg
 									use(xlink:href='/img/sprite.svg#chevron_right')
 							span.select-body
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Address
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Phone
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Name
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Credit
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Criminal
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Internet
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Payday Loan
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Social
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Bankruptcy
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Death
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Location
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Initial
+								.select-body_item
+									label.checkbox
+										input(type='checkbox')
+										span Other
+
 						ul.identity-list
 							li.white-block-list-item
 								.white-block-list-item_image
