--- a/dev/templates/lost.pug
+++ b/dev/templates/lost.pug
@@ -16,7 +16,10 @@ block content
 							span Lost Wallet Service
 						p.text
 							| If your wallet or purse is lost or stolen, instead of spending time searching for information to cancel your cards, the Identimaxx Lost Wallet Service will quickly guide you through the process.
-						button.btn.-blue CALL US 1800 XXX XX XX
+						button.btn.-blue
+							svg
+								use(xlink:href='/img/sprite.svg#call')
+							span CALL US 1800 XXX XX XX
 					.vault-right.lost-right
 						img(src='/img/lost.svg')
 				h5.lost-subtitle Follow these steps
