--- a/dev/templates/report.pug
+++ b/dev/templates/report.pug
@@ -14,7 +14,7 @@ block content
 					a(href='#').breads-item Initial Report
 				.vault-row.row
 					.vault-left.report-left
-						h2h5.white-block_title.vault-title.report-title Hi John,
+						h5.white-block_title.vault-title.report-title Hi John,
 						h3.subtitle.report-subtitle
 							| the following is your initial scan report Title Monitoring
 						p.text.report-text
@@ -31,9 +31,6 @@ block content
 	.popup-half.-opened.-whiteshadow.report#license
 		.popup-half-left
 		.popup-half-right
-			button.popup-close(data-click="front:closeHalf" data-popup='#license')
-				svg
-					use(xlink:href='/img/sprite.svg#close')
 			.change-method.member-popup.driver
 				h5.title-popup.block-title 10410 W PRAIRIE HILLS CIR, SUN CITY, AZ
 					br
