--- a/dev/templates/risk.pug
+++ b/dev/templates/risk.pug
@@ -29,7 +29,7 @@ block content
 						p.text.risk-text
 							| We extracted a huge data set of historic victim, recovery, breach, account, demographic, and online data to train our machine learning prediction models.
 						.risk-data
-							.risk-data-head.row
+							.risk-data-head.row(data-click="front:toggleHistoric")
 								span Historic Victim Data
 								svg
 									use(xlink:href='/img/sprite.svg#expand_more')
