--- a/dev/templates/vault-other.pug
+++ b/dev/templates/vault-other.pug
@@ -33,7 +33,7 @@ block content
 										.vault-accordeon-item_title Gametag
 										button.vault-accordeon-item_arr
 											svg
-												use(xlink:href='/img/sprite.svg#expand_more')
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -43,7 +43,7 @@ block content
 										.vault-accordeon-item_title School Identification
 										button.vault-accordeon-item_arr
 											svg
-												use(xlink:href='/img/sprite.svg#expand_more')
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -53,7 +53,7 @@ block content
 										.vault-accordeon-item_title Birth Certificate
 										button.vault-accordeon-item_arr
 											svg
-												use(xlink:href='/img/sprite.svg#expand_more')
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 					.vault-right
 						h3.subtitle What is the Identimaxx vault?
