--- a/dev/templates/vault-vehicle.pug
+++ b/dev/templates/vault-vehicle.pug
@@ -33,7 +33,7 @@ block content
 										.vault-accordeon-item_title 2023 Hyundai Elantra
 										button.vault-accordeon-item_arr
 											svg
-												use(xlink:href='/img/sprite.svg#directions_car')
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -43,7 +43,7 @@ block content
 										.vault-accordeon-item_title 2023 Genesis G70
 										button.vault-accordeon-item_arr
 											svg
-												use(xlink:href='/img/sprite.svg#expand_more')
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -53,7 +53,7 @@ block content
 										.vault-accordeon-item_title Vehicle 3
 										button.vault-accordeon-item_arr
 											svg
-												use(xlink:href='/img/sprite.svg#expand_more')
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accordeon-item_body
 										button.link.-plus
 											svg
@@ -85,7 +85,7 @@ block content
 					.change-row
 						.inpt.-full
 							span.inpt-placeholder Make
-							input(type='text' value="Name of company tat made the car")
+							input(type='text' placeholder="Name of company that made the car")
 					.change-row
 						.inpt.-full
 							span.inpt-placeholder Model
