--- a/dev/templates/vault.pug
+++ b/dev/templates/vault.pug
@@ -32,6 +32,8 @@ block content
 												use(xlink:href='/img/sprite.svg#directions_car')
 										.vault-accordeon-item_title Driver's License
 										button.vault-accordeon-item_arr
+											svg
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -40,6 +42,8 @@ block content
 												use(xlink:href='/img/sprite.svg#home_health')
 										.vault-accordeon-item_title Health Insurance Card
 										button.vault-accordeon-item_arr
+											svg
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -48,6 +52,8 @@ block content
 												use(xlink:href='/img/sprite.svg#mail')
 										.vault-accordeon-item_title Email Address
 										button.vault-accordeon-item_arr
+											svg
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
@@ -56,14 +62,18 @@ block content
 												use(xlink:href='/img/sprite.svg#id_card')
 										.vault-accordeon-item_title Social Security Number
 										button.vault-accordeon-item_arr
+											svg
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
-								.vault-accordeon-item
+								.vault-accordeon-item.-show
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
 											svg
 												use(xlink:href='/img/sprite.svg#call')
 										.vault-accordeon-item_title Phone Number
 										button.vault-accordeon-item_arr
+											svg
+												use(xlink:href='/img/sprite.svg#chevron_right')
 									.vault-accorderon-item_body
 										.vault-accordeon-item_input
 											input(type='text' value='(123) 456-7891')
@@ -71,6 +81,15 @@ block content
 												button
 													svg
 														use(xlink:href='/img/sprite.svg#more_vert')
+												.vault-accordeon-item_actions
+													button
+														svg
+															use(xlink:href='/img/sprite.svg#border_color')
+														span Edit Details
+													button
+														svg
+															use(xlink:href='/img/sprite.svg#delete')
+														span Delete Item
 										button.link.-plus
 											svg
 												use(xlink:href='/img/sprite.svg#add')
@@ -82,7 +101,8 @@ block content
 												use(xlink:href='/img/sprite.svg#two_pager')
 										.vault-accordeon-item_title Passport
 										button.vault-accordeon-item_arr
-
+											svg
+												use(xlink:href='/img/sprite.svg#chevron_right')
 
 
 					.vault-right
