--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -587,19 +587,19 @@ body
 			visibility visible
 			right: 0
 			.popup-half-right
-				transform translateX(0%) translateY(120px)
+				transform translateX(0%) translateY(0px)
 		&-left,&-right
 			overflow-y: auto
 			wh(100vw, 100vh)
 			+desktop()
-				wh(50vw,calc(100vh - 64px))
+				wh(50vw,100vh)
 				transform translateY(64px)
 		&-left
 			left: 0
 			background-color RGBA(0,0,0,.25)
 		&-right
 			transition .35s ease
-			transform translateX(-50%) translateY(120px)
+			transform translateX(-50%) translateY(0px)
 			background-color #fff
 			padding 40px 24px 80px
 			+desktop()
@@ -781,7 +781,11 @@ body
 		.btn
 			w 100%
 			+desktop()
-				width initial
+				width 133px
+				padding 6px
+			&.-bi
+				+desktop()
+					w 219px
 		&.-large
 			padding-bottom: 24px
 		&_head
@@ -804,12 +808,12 @@ body
 			display: flex
 			align-items: center
 			column-gap: 8px
-			font 500 24px/32px Barlow
+			font 500 32px/32px Barlow
 			color RGB($pdark_blue)
 			order 2
 			margin-top: 8px
 			svg
-				wh 19px 15px
+				wh 24px
 			+desktop()
 				order 0
 				margin-top: 0
@@ -818,6 +822,10 @@ body
 			&-item
 				display: flex
 				padding: 16px 0
+				border-radius 8px
+				transition .35s ease
+				&:hover:not(:last-child)
+					background-color RGBA($plight_blue,.08)
 				&.nopad
 					flex-wrap wrap
 					+desktop()
@@ -878,6 +886,9 @@ body
 					font 500 16px/19.2px Barlow
 					color RGB($pdark_blue)
 					margin-bottom: 4px
+				&.-upgrade:hover
+					.white-upgrade
+						opacity: 1
 			&-item_image
 				flex 0 0 calc( 16px + 16px + 10px)
 				display: flex
@@ -887,7 +898,7 @@ body
 					margin-right: 0px
 					flex 0 0 calc( 16px + 16px + 40px)
 				svg
-					wh 31px 30px
+					wh 40px
 					use
 						fill: RGB($plight_blue)
 		&-alerts
@@ -947,6 +958,7 @@ body
 					display: block
 					background-color #F1C531
 
+
 	&-upgrade
 		wh 100%
 		padding 30px 0
@@ -962,6 +974,8 @@ body
 		justify-content: center
 		background-color RGBA($pdark_blue,.6)
 		backdrop-filter: blur(8px)
+		opacity: 0
+		transition .35s ease
 		&-title
 			font 600 24px/32px Barlow
 		&-text
@@ -1002,7 +1016,12 @@ body
 			font 700 16px/19.2px Barlow
 			color #F3B82C
 			text-transform: uppercase
-			margin-left: 18px
+		i
+			display: block
+			wh 2px
+			border-radius 2px
+			margin: 0 8px
+			background-color RGB($pdark_blue)
 	&-text
 		font 400 16px/19.2px Barlow
 		color RGB($pdark_gray)
@@ -1017,10 +1036,17 @@ body
 				margin-top: 24px
 				max-width 1024px
 		&-block
+			.btn
+				+desktop()
+					w 120px
+					text-align: center
 			+desktop()
 				max-width 504px
 				min-width 504px
 				margin-top: 0
+				padding-left: 0
+			.gray-block-title
+				border-bottom: 0
 			padding-left: 0
 			margin-top: 40px
 			.gray-text
@@ -1067,7 +1093,7 @@ body
 		font 500 16px/19.2px Barlow
 		color RGBA($pdark_blue)
 		svg
-			wh 17px 15px
+			wh 24px
 			use
 				fill: RGB($plight_blue)
 
@@ -1092,6 +1118,7 @@ body
 		box-shadow 0 2px 8px RGBA($plight_blue,.24)
 		margin-top: 16px
 		border-radius 8px
+		padding: 8px
 		.white-block-list-item
 			padding 16px
 			+desktop()
@@ -1171,6 +1198,8 @@ body
 	padding: 20px 0
 	border-top 1px solid RGBA($plight_blue,.2)
 	border-bottom 1px solid RGBA($plight_blue,.2)
+	&:last-child
+		border-bottom: 0
 	li
 		margin-bottom 8px
 	strong
@@ -1211,19 +1240,22 @@ body
 			border-radius 8px
 			margin-bottom 16px
 			font 500 16px/19px Barlow
+			&.-show
+				.vault-accordeon-item_arr
+					transform rotate(-90deg)
 			&_arr
 				position: absolute
-				right: 20px
-				top: 22px
+				right: 23px
+				top: 20px
+				transform rotate(90deg)
 				svg
-					wh 14px 9px
+					wh 7px 12px
 			&_head
 				align-items: center
 				column-gap: 8px
 			&_img
-				padding: 0 4px
 				svg
-					wh 17px 15px
+					wh 24px
 					use
 						fill RGB($plight_blue)
 			&_input
@@ -1249,6 +1281,25 @@ body
 				padding-top: 16px
 				.link.-plus
 					padding-left: 0
+			&_actions
+				position: absolute
+				left -10px
+				z-index 100
+				w 160px
+				padding 6px 21px
+				background-color: RGB($pwhite)
+				border 2px solid RGBA($plight_blue,.2)
+				box-shadow 0 4px 16px RGBA($plight_blue,.2)
+				border-radius 8px
+				button
+					display: flex
+					align-items: center
+					padding 8px 0
+					&:last-child
+						color RGB($ured)
+					svg
+						wh 24px
+						margin-right: 10px
 	&-tabs
 		display flex
 		column-gap 24px
@@ -1288,10 +1339,12 @@ body
 		&_img
 			padding: 0 10px
 		&_title,&_text
+			font-size: 13px
 			color RGB($pdark_gray)
 			max-width 395px
 		&_title
-			font 600 16px/15.6px Barlow
+			font 600 13px/15.6px Barlow
+			margin-bottom: 3px
 	&-left
 		w 100%
 		+desktop()
@@ -1338,6 +1391,7 @@ body
 		box-shadow: 0px 4px 16px RGBA($plight_blue, 0.16)
 		border-radius: 8px
 		+desktop()
+			w 583px
 			padding 40px
 .report
 	&.popup-half
@@ -1350,7 +1404,7 @@ body
 		+desktop()
 			w 368px
 	&-title
-		margin-bottom: 0
+		margin-bottom: 0 !important
 	&-subtitle.subtitle
 		font-size: 24px
 		line-height: 28px
@@ -1372,6 +1426,11 @@ body
 			max-width 460px
 		.btn
 			margin-top: 24px
+			display: flex
+			align-items: center
+			column-gap: 8px
+			svg
+				wh 24px
 	&-right
 		w 100%
 		+desktop()
@@ -1470,10 +1529,14 @@ body
 			font-weight: 500
 			align-items: center
 			column-gap: 20px
+			cursor: pointer
 			svg
 				wh 12px 8px
 		&-body
+			display: none
 			padding-top: 24px
+			&.-show
+				display: block
 			&-item
 				padding 24px
 				border 2px solid RGBA($plight_blue,.2)
@@ -1696,6 +1759,9 @@ body
 			flex 0 0 3px
 			border-radius 100%
 			background-color: RGB($pdark_gray)
+		a
+			&:hover
+				text-decoration: underline
 	&-copy
 		text-align: center
 		w 100%
@@ -1704,6 +1770,9 @@ body
 		+desktop()
 			w initial
 			margin-top: 0
+	.section
+		+desktop()
+			padding: 16px 0
 .details
 	.popup-half-right
 		transform: translateY(0px)
@@ -1725,3 +1794,11 @@ body
 	&-form
 		+desktop()
 			padding: 149px 80px
+.member-popup.driver
+	.title-popup
+		font-size: 32px
+.monit
+	&-table
+		td,th
+			&:first-child
+				font-weight: 400 !important
