--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -96,7 +96,9 @@ body
 	&.-blue
 		color RGB($pdark_blue)
 		text-decoration: underline
-
+		&:hover
+			color RGBA($plight_blue,1)
+			text-decoration: none
 .title
 	font 500 24px/30px Barlow
 	+desktop()
@@ -161,6 +163,8 @@ body
 			&.-action
 				color: RGB($pdark_gray)
 
+		.checkbox input:checked+span:before
+			background: url('/img/check_blue.png') no-repeat center !important
 .checkbox
 	font 500 16px/19.2px Barlow
 	color RGB($pdark_gray)
