Update UI layout and personalize user information
Enhanced the user interface by updating pug templates and modifying the associated CSS styles. User-specific details have been integrated into the notifications and header templates. Several layouts have been refined to improve visual presentation and functionality across various pages.

--- a/dev/templates/404.pug
+++ b/dev/templates/404.pug
@@ -8,9 +8,9 @@ block content
            .section.n404-content
                h1.n404-title.title Page Not Found
                img.n404-img(src='/img/404.png')
-               a.link.-with-img.n404-link
+               a.link.-with-img.n404-link(href='#')
                    svg
-                    use(xlink:href='/img/sprite.svg#chevron_right')
+                    use(xlink:href='/img/sprite.svg#chevron_left')
                     span Back To Homepage
 
         script(src='/front.js' type='module')
