--- a/dev/templates/home.pug
+++ b/dev/templates/home.pug
@@ -66,7 +66,7 @@ block content
                                                 | records for jmurack@gmail.com
                                     li.white-block-list-item
                                         button.btn.-blue
-                                            | Vie All Alerts
+                                            | View All Alerts
                         .white-block
                             .white-block_head
                                 h5.white-block_title.row
@@ -134,7 +134,7 @@ block content
                                                 | records for jmurack@gmail.com
                                     li.white-block-list-item
                                         button.btn.-blue
-                                            | Vie All Alerts
+                                            | View All Alerts
                         .white-block
                             .white-block_head
                                 h5.white-block_title.row
@@ -215,13 +215,13 @@ block content
                                 | In the event that you misplace or your wallet is stolen,we will
                                 br
                                 | assist you in securing your lost cards and important information.
-                            a.btn Learn More
+                            a.btn(href='/lost.html') Learn More
                     .gray-block.gray-bottom-block
                         h6.gray-block-title Client Support
                             p.gray-text
                                 | If you need assistance, our support team is here to help you with
                                 | any questions or concerns you may have.
-                            a.btn Get Help
+                            a.btn(href='/support.html') Get Help
     include footer-profile
 
 
