--- a/dev/templates/lost.pug
+++ b/dev/templates/lost.pug
@@ -26,7 +26,7 @@ block content
 				ul.lost-steps-list
 					li.lost-item
 						.lost-item_img
-							img(src='/img/lost1.png')
+							img(src='/img/lost1.gif')
 						.lost-item-content
 							h5.lost-item_title
 								strong 1.
@@ -35,7 +35,7 @@ block content
 								| Safeguard your cards in the vault to help you recalling in the event that you misplace your wallet.
 					li.lost-item
 						.lost-item_img
-							img(src='/img/lost2.png')
+							img(src='/img/lost2.gif')
 						.lost-item-content
 							h5.lost-item_title
 								strong 2.
@@ -46,7 +46,7 @@ block content
 								a(href='#').link.-blue  855-200-6788.
 					li.lost-item
 						.lost-item_img
-							img(src='/img/lost3.png')
+							img(src='/img/lost3.gif')
 						.lost-item-content
 							h5.lost-item_title
 								strong 3.
@@ -55,7 +55,7 @@ block content
 								| Our Lost Wallet Service experts will guide you through recovering and securing all your vital information.
 					li.lost-item
 						.lost-item_img
-							img(src='/img/lost4.png')
+							img(src='/img/lost4.gif')
 						.lost-item-content
 							h5.lost-item_title
 								strong 4.
