--- a/dev/templates/profile.pug
+++ b/dev/templates/profile.pug
@@ -42,7 +42,7 @@ block content
 									td.table-actions
 										button.btn-table(data-click="front:showForm" data-popup="#member-popup")
 											svg
-												use(xlink:href='/img/sprite.svg#delete')
+												use(xlink:href='/img/sprite.svg#cancel')
 								tr
 									td John
 									td Doe
@@ -50,7 +50,7 @@ block content
 									td.table-actions
 										button.btn-table(data-click="front:showForm" data-popup="#member-popup")
 											svg
-												use(xlink:href='/img/sprite.svg#delete')
+												use(xlink:href='/img/sprite.svg#cancel')
 								tr
 									td John
 									td Doe
@@ -58,5 +58,5 @@ block content
 									td.table-actions
 										button.btn-table(data-click="front:showForm" data-popup="#member-popup")
 											svg
-												use(xlink:href='/img/sprite.svg#delete')
+												use(xlink:href='/img/sprite.svg#cancel')
 	include footer-profile
