--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -87,7 +87,7 @@ header.head
 									br
 									| Richardson
 							li.head-mobile-subitem.-bottom
-								svg(style='width:14px')
+								svg
 									use(xlink:href='/img/sprite.svg#add')
 								span.head-mobile-subitem_value
 									| Add Family Member
