--- a/dev/templates/vault-auto.pug
+++ b/dev/templates/vault-auto.pug
@@ -49,7 +49,7 @@ block content
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
 											svg
-												use(xlink:href='/img/sprite.svg#news')
+												use(xlink:href='/img/sprite.svg#directions_car')
 										.vault-accordeon-item_title Vehicle 3
 										button.vault-accordeon-item_arr
 											svg
