--- a/dev/templates/vault.pug
+++ b/dev/templates/vault.pug
@@ -88,7 +88,7 @@ block content
 														span Edit Details
 													button
 														svg
-															use(xlink:href='/img/sprite.svg#delete')
+															use(xlink:href='/img/sprite.svg#adelete')
 														span Delete Item
 										button.link.-plus
 											svg
