--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -1,6 +1,9 @@
 body
 	font: 400 16px Barlow
-
+.set
+	display: flex
+	flex-direction column
+	min-height 100vh
 .section
 	padding 16px 24px 0
 	+desktop()
@@ -32,18 +35,22 @@ body
 		+desktop()
 			display none
 	&-menu
-
 		&-cont
 			display none
 			+desktop()
 				display block
 				margin 0 auto
 		&_item
+			padding 11px 16px
+			transition .35s ease
 			&.-dropdown
 				cursor: pointer
 				display flex
 				align-items center
 				column-gap: 14.35px
+			&:hover
+				border-radius 8px
+				background-color: RGB($plight_blue,.2)
 			span svg
 				wh 12px 7px
 			position: relative
@@ -73,7 +80,7 @@ body
 			display: block
 			padding 8px
 			padding-bottom: 0
-			top: 28px
+			top: 40px
 			left: 0
 			background: #fff
 			box-shadow 0 4px 24px RGBA($plight_blue,.2)
@@ -89,7 +96,7 @@ body
 				span
 					color:  RGB($pdark_blue)
 			.head-mobile-subitem_icon
-				flex 0 0 19px
+				flex 0 0 24px
 
 	&-login
 		display none
@@ -104,7 +111,7 @@ body
 			text-align center
 			justify-content center
 			svg
-				wh 7px 12px
+				wh 24px
 				use
 					fill RGB($pdark_gray)
 			&:hover
@@ -193,7 +200,7 @@ body
 			padding-left: 16px
 			margin-bottom: 8px
 			&_icon
-				wh 19px 17px
+				wh 24px
 				use
 					fill RGB($pdark_gray)
 			&_value
@@ -265,10 +272,10 @@ body
 				text-align center
 		.btn-eye
 			position absolute
-			top 20px
+			top 16px
 			right 16px
 			& svg
-				wh 16px 10px
+				wh 18px
 		.tar,.tal
 			margin 8px 0 24px
 			font 400 14px/18px Barlow
@@ -377,14 +384,14 @@ body
 			+desktop()
 				margin-bottom 24px
 			svg
-				wh(14px)
+				wh(24px)
 				use
 					fill RGB($pdark_gray)
 				display: none
 				+desktop()
 					display: block
-					wh 15px 20px
-			&.active
+					wh 24px
+			&.active,&:hover
 				background-color RGBA($plight_blue,.2)
 				color RGB($pdark_blue)
 				svg use
@@ -408,6 +415,8 @@ body
 			w(100%)
 			td,th
 				padding 18px 0 16px
+			td:first-child
+				font-weight: 400 !important
 			tr
 				border-bottom 1px solid RGB($plight_gray)
 			thead
@@ -464,20 +473,17 @@ body
 		&-title
 			display flex
 			align-items center
-			column-gap 19px
+			column-gap 16px
 			strong
 				font 500 16px/19.2px Barlow
 			svg
-				wh(25px,20px)
+				wh(32px)
 				use
 					fill RGB($pdark_blue)
 			span
 				font 400 13px Barlow
 				display block
 				color RGB($pdark_gray)
-			&.-second
-				svg
-					wh(25px)
 		&-checkboxes
 			padding-bottom 24px
 			margin-bottom 24px
@@ -562,11 +568,14 @@ body
 					padding 0 40px
 	&-close
 		position absolute
-		right 13px
-		top 13px
+		right 8px
+		top 8px
 		svg
-			wh(14px)
+			wh(24px)
 			fill RGB($pdark_gray)
+		&.-half
+			svg
+				wh 32px
 	&-body
 		padding 0 23px
 		background-color RGB($pwhite)
@@ -593,7 +602,7 @@ body
 			wh(100vw, 100vh)
 			+desktop()
 				wh(50vw,100vh)
-				transform translateY(64px)
+				transform translateY(0px)
 		&-left
 			left: 0
 			background-color RGBA(0,0,0,.25)
@@ -1225,7 +1234,7 @@ body
 		margin 24px 0
 		font 500 32px/38px Barlow
 		+desktop()
-			margin 40px 0
+			margin 40px 0 30px
 	&-accordeon
 		+desktop()
 			min-width 583px
@@ -1240,6 +1249,8 @@ body
 			border-radius 8px
 			margin-bottom 16px
 			font 500 16px/19px Barlow
+			.link.-plus
+				padding-left: 0
 			&.-show
 				.vault-accordeon-item_arr
 					transform rotate(-90deg)
@@ -1295,6 +1306,8 @@ body
 					display: flex
 					align-items: center
 					padding 8px 0
+					&:hover span
+						text-decoration: underline
 					&:last-child
 						color RGB($ured)
 					svg
@@ -1434,7 +1447,7 @@ body
 	&-right
 		w 100%
 		+desktop()
-			w iniital
+			w initial
 			padding-top: 40px
 		img
 			w 100%
@@ -1470,6 +1483,8 @@ body
 		&_text
 			padding-left: 19px
 			color RGB($pdark_gray)
+		&_img
+			max-width 48px
 	.btn
 		w 100%
 		+desktop()
@@ -1586,9 +1601,9 @@ body
 			+desktop()
 				w 340px
 			&_img
-				flex 0 0 32px
+				flex 0 0 40px
 				svg
-					wh 32px 25px
+					wh 40px
 			&-title
 				font-weight: 500
 			&-text
@@ -1596,6 +1611,17 @@ body
 				color: RGB($pdark_gray)
 				+desktop()
 					w 292px
+	&-left
+		+desktop()
+			display: flex
+			max-width 567px
+			&:after
+				content: ''
+				display: block
+				wh 2px calc( (597 / 1080) * 100vh)
+				margin-top: 120px
+				margin-left: 107px
+				background-color RGB($plight_gray)
 .n404
 	&-content
 		height calc( 100vh - 107px)
@@ -1607,16 +1633,18 @@ body
 			height calc( 100vh - 67px)
 	&-img
 		display: block
-		margin 40px 0
+		margin 40px 0 45px
 	&-link
 		display: flex
 		align-items: center
 		column-gap: 17px
+		font: 500 16px/19px Barlow
 		span
 			color RGB($pdark_blue)
 		svg
-			wh(7px,12px)
-			transform rotate(180deg)
+			wh 24px
+		&:hover span
+			text-decoration: underline
 	&-need
 		color RGB($pdark_gray)
 	&-title
@@ -1735,9 +1763,17 @@ body
 
 .foot
 	color RGB($pdark_gray)
-	border-top 2px solid RGBA($plight_blue,.2)
+	&:before
+		content: ''
+		display: block
+		border-top: 2px solid RGBA(var(--plight_blue), 0.2);
+		+desktop()
+			margin-top: 120px
 	+desktop()
-		margin-top: 120px
+		margin-top: auto
+	&-site
+		+desktop()
+			width: 270px
 	&-site
 		display: none
 		+desktop()
@@ -1775,12 +1811,12 @@ body
 			padding: 16px 0
 .details
 	.popup-half-right
-		transform: translateY(0px)
-		padding-top: 100px
+		transform: translate(0px,-60px)
+		padding-top: 189px
 		position: relative
 		z-index:  1000
 		+desktop()
-			transform translateY(64px)
+			transform translate(64px,0px)
 .mem
 	&-title
 		display: none
@@ -1788,6 +1824,7 @@ body
 			display: block
 .copy
 	padding-bottom: 40px
+	font 400 13px/16px Barlow
 	+desktop()
 		padding-bottom: 0
 .reset
@@ -1802,3 +1839,8 @@ body
 		td,th
 			&:first-child
 				font-weight: 400 !important
+.-resetlink a
+	display: inline !important
+.tal.-resetal
+	text-align: left
+
