--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -39,7 +39,7 @@ body
 		w 100%
 	&-table
 		&,svg
-			wh(19px)
+			wh(24px)
 		use
 			fill RGB($ured)
 	&-eye
@@ -89,7 +89,7 @@ body
 		color RGB($pdark_blue)
 		font 500 16px/19.2px Barlow
 		svg
-			wh 14px
+			wh 24px
 			margin-right: 12px
 		svg use
 			fill RGB($pdark_blue)
@@ -152,6 +152,8 @@ body
 			visibility: visible
 
 		&-item
+			w 100%
+			text-align: left
 			display: block
 			padding: 8px 16px
 			border-radius 8px
