--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -222,7 +222,7 @@ body
 				justify-content center
 .-bg
 	background-image url('../img/login-mobile.jpg')
-	background-size 100%
+	background-size cover
 	background-position center top
 	background-repeat no-repeat
 	+tablet()
@@ -233,6 +233,8 @@ body
 		wh(100vw,90vh)
 		display flex
 		justify-content center
+		+tablet()
+			align-items center
 		+desktop()
 			wh(100vw,100vh)
 	&-logo
