fix login mobile page

--- a/dev/templates/login.pug
+++ b/dev/templates/login.pug
@@ -25,4 +25,4 @@ block content
 						.login-form-actions
 							span Not a member yet?
 							a(href='/signup.html').link Sign Up
-	include template/footer
+	include footer-profile
