--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -142,7 +142,7 @@ header.head
 								| Title Monitoring
 						li.head-mobile-subitem
 							svg.head-mobile-subitem_icon
-								use(xlink:href='/img/sprite.svg#news')
+								use(xlink:href='/img/sprite.svg#disable_visible')
 							span.head-mobile-subitem_value
 								| Privacy Protect
 					li.head-mobile-menu_item.-dropdown.head-menu_item(data-click="front:openMenuItem")
