--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -17,8 +17,14 @@ body
 	+desktop()
 		flex-wrap nowrap
 .head
+	.btn
+		+desktop()
+			padding 8px 16px 9px
 	&-row
+		padding 4px 0
 		align-items: center
+		+desktop()
+			padding 0
 	&-logo
 		max-width 142px
 		& svg
@@ -250,7 +256,7 @@ body
 		box-shadow 0 4px 16px RGBA($plight_blue, .16)
 		max-width 590px
 		margin 80px auto 0
-		padding 40px 20px 60px
+		padding 40px 20px
 		&.-with-bg
 			w 100%
 			+desktop()
@@ -282,8 +288,6 @@ body
 			position absolute
 			top 16px
 			right 16px
-			& svg
-				wh 18px
 		.tar,.tal
 			margin 8px 0 24px
 			font 400 16px/19.2px Barlow
@@ -1773,6 +1777,7 @@ body
 .footer
 	margin-top auto
 .foot
+	margin-top auto
 	color RGB($pdark_gray)
 	&:before
 		content: ''
@@ -1791,7 +1796,7 @@ body
 			display: block
 	&-row
 		justify-content center
-		padding: 40px 0
+		padding: 24px 0 40px
 		+desktop()
 			justify-content space-between
 			padding 24px 40px
