--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -15,7 +15,7 @@ body
 .btn
 	border 2px solid RGB($pdark_blue)
 	border-radius 8px
-	padding 8px 16px 9px
+	padding 6px 16px
 	font 500 16px/19.2px Barlow
 	position: relative
 	transition .35s ease
