--- a/dev/templates/forgot.pug
+++ b/dev/templates/forgot.pug
@@ -16,5 +16,6 @@ block content
 							input(type='email' placeholder='Please enter your email address')
 						button.btn.-blue.-full.forgot-btn
 							span Submit
-						a.link(href='/reset.html') Back
-	include template/footer
+						.login-form-actions
+							a.link(href='/reset.html') Back
+	include footer-profile
