--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -21,7 +21,7 @@ html(lang='ru')
 										svg
 											use(xlink:href='/img/sprite.svg#eye')
 								.tar
-									a.link(href='/reset.html') Forgot Password?
+									a.link(href='/forgot.html') Forgot Password?
 								button.btn.-blue.-full
 									span Sign In
 								.login-form-actions
