--- a/dev/templates/template/header-l.pug
+++ b/dev/templates/template/header-l.pug
@@ -88,7 +88,7 @@ header.head
                                 use(xlink:href='/img/sprite.svg#id_card')
                             span.head-mobile-subitem_value
                                 | Identity Protection
-                        li.head-mobile-subitem.menu-active
+                        li.head-mobile-subitem
                             svg.head-mobile-subitem_icon.menu_icon
                                 use(xlink:href='/img/sprite.svg#credit_score')
                             span.head-mobile-subitem_value.menu_value
@@ -114,7 +114,7 @@ header.head
                                 use(xlink:href='/img/sprite.svg#person')
                             span.head-mobile-subitem_value
                                 | Personal
-                        li.head-mobile-subitem.menu-active
+                        li.head-mobile-subitem
                             svg.head-mobile-subitem_icon.menu_icon
                                 use(xlink:href='/img/sprite.svg#exchange')
                             span.head-mobile-subitem_value.menu_value
